app/styles/main.scss
$font-size-base: 16px;
$brand-primary: #1b93c7;
$nav-link-hover-bg: darken($brand-primary, 10%);
$border-radius-base: 0;
$line-height-base: 1.6;

$icon-font-path: "../fonts/bootstrap/";
$fa-font-path: "../fonts";

// bower:scss
@import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
// endbower

$grayed: #888;
$gray-bg: #fcfcfc;

$header-bg: #2e373c;
$header-link-color: #fff;
$brand-color: #fff;
$brand-strong-color: lighten($brand-primary, 20%);
$page-header-bg: #f5f7f8;

$algo-category-border-color: darken($gray-bg, 5%);
$algo-list-item-bg: darken($gray-bg, 1%);
$pre-bg: $gray-bg;
$pre-border-color: #e5e5e5;

$footer-bg: #2a3744;
$footer-color: #8e8e8e;
$footer-height: 140px;
$content-padding: 60px;
$site-margin-bottom: -$footer-height;
$search-highlight: #ffff66;

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

html, body {
    height: 100%;
}

body {
    font-weight: 300;
}

h1, h2, h3 {
    font-weight: 300;
}

pre code {
    font-size: $font-size-base - 4;
}

.site {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto $site-margin-bottom;

    &-header {
        min-height: 40px;
        padding: 10px 0;
        border: none;
        background: $header-bg;

        &.navbar {
            margin-bottom: 0;
        }

        & > .container .site-brand {
            padding: 0;
            margin-left: 0;
            font-weight: 700;
        }
    }

    &-brand {
        height: auto;
        padding: 5px 0;
        color: $brand-color;

        &:focus, &:hover {
            color: $brand-color;
        }

        h1 {
            margin: 0;
            line-height: 1;
            font-weight: bold;
            font-size: 20px;
        }

        strong {
            color: $brand-strong-color;
        }
    }

    &-content {
        padding: $content-padding 0;

        h1:first-child {
            margin-top: 0;
        }
    }

    &-footer {
        height: $footer-height;
        padding-top: 30px;
        padding-bottom: 100px;
        background: $footer-bg;
        color: $footer-color;
        font-size: $font-size-base - 2;
    }
}

.navbar {

    &-header {
        padding: 5px 0;
    }

    &-collapse.collapsing,
    &-collapse.in {
        margin-top: 10px;
    }

    .active a {
        background: $nav-link-hover-bg;
    }

    &-nav.nav {
        margin-right: 0;

        a {
            padding: 15px 25px;
            margin: -10px 0;
            color: $header-link-color;
        }
    }

    &-nav.navbar-right {
        &:last-child {
            margin-right: 0;
        }
    }

    &-toggle {
        padding: 10px;
        margin: -5px;

        .icon-bar {
            background: #428bca;
        }
    }
}

.search-bar {
    margin-left: 25px;

    &-input {
        height: 32px;
        padding-left: (32px - $font-size-base + 2) / 2;
        padding-right: 30px;
        margin-right: -15px;
        border: none;
        font-size: $font-size-base - 2;
    }

    &-icon {
        position: relative;
        left: -15px;
        opacity: .3;
        pointer-events: none;
    }
}

.view-content {

}

.footer {
    &-push {
        height: $footer-height;
    }

    &-brand {
        color: $brand-color;
        font-weight: bold;

        strong {
            color: $brand-strong-color;
        }
    }

    &-link {
        &:hover {
            color: #fff;
            text-decoration: none;
        }

        .fa {
            margin-right: 5px;
            font-size: $font-size-base + 6;
            vertical-align: middle;
        }
    }
}


.page {
    &-header {
        padding: $content-padding 0;
        border-bottom: none;
        margin: -$content-padding 0 0;
        background: $page-header-bg;

        &-text {
            color: $header-bg;
        }

        &-description {
            margin-bottom: 0;
            color: lighten($header-bg, 30%);
            font-size: $font-size-base + 2;
        }
    }

    &-content {
        padding: $content-padding 0;
        margin-bottom: -$content-padding;

        h2:first-child {
            margin-top: 0;
        }
    }
}

$algo-padding: 1em;

.algo {
    padding: $algo-padding;
    margin: 0 (-$algo-padding);

    &:nth-child(2n) {
        background: $algo-list-item-bg;
    }

    &-title {
        margin: 0 0 .3em 0;
        font-size: 1.5em;
    }

    &-category {
        color: $grayed;
        font-size: .9em;
        text-transform: uppercase;

        &-icon {
            margin-right: .2em;
            color: lighten($grayed, 30%);
            font-size: 1.2em;
            vertical-align: middle;
        }
    }

    &-published {
        color: $grayed;
        font-size: .9em;

        &-date {
            font-weight: 400;
        }
    }

    &-author {
        &-icon {
            margin-right: .1em;
        }
    }

    &-description {
        margin: .3em 0;
    }
}

.category {
    &-title {
        margin-bottom: .1em;
    }

    &-icon {
        margin-right: .2em;
        color: lighten($grayed, 30%);
    }

    &-description {
        color: $grayed;
        padding: 0 $algo-padding .4em $algo-padding;
        border-bottom: 3px solid $algo-category-border-color;
        margin: 0 (-$algo-padding);
        font-size: .9em;
    }

    &-algo-list {
        font-size: .8em;

        .algo-description {
            margin: 0;
        }
    }

    &:first-child {
        .category-title {
            margin-top: 0;
        }
    }
}

@media (min-width: $screen-sm-min) {
    .category-title {
        margin-left: -34px;
    }
}

.article {
    &-category {
        text-transform: uppercase;

        &-icon {
            margin-right: .3em;
            color: lighten($grayed, 30%);
            font-size: 1.5em;
            vertical-align: middle;
        }
    }

    &-published-date {
        font-weight: 400;
    }

    &-author {
        &-icon {
            margin-right: .2em;
        }
    }

    .jssocials-shares {
        margin-top: .5em;
        font-size: 1.3em;
    }
}

.search-algo-list {
    font-size: .8em;

    .found-highlight {
        background: $search-highlight;
    }
}

